direccion agregada al mensaje html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <body>
-    <form id="autito-form">
-      <label for="comandos">Comandos:</label><br>
-      <input type="text" id="comandos" />
-      <input type="submit" value="Ejecutar" />
-      <label id="resultado-div"></label>
-    </form>
+    <center>
+      <form id="autito-form">
+        <label for="comandos">Comandos:</label><br>
+        <input type="text" id="comandos" />
+        <input type="submit" value="Ejecutar" />
+        <label id="resultado-div"></label>
+      </form>
+    </center>
   </body>
 <script src="Autitos.js"></script>
 </html>
